--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hugo-lunr-zh",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "a lunr index generator for hugo with Chinese languange support",
   "main": "lib/index.js",
   "bin": {
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/stkevintan/hugo-lunr-zh#readme",
   "dependencies": {
-    "fs-readdir-recursive": "^1.1.0",
+    "fs-extra": "^9.0.1",
     "gray-matter": "^3.1.1",
-    "mkdirp-promise": "^5.0.1",
+    "klaw": "^3.0.0",
     "nodejieba": "^2.2.5",
     "remove-markdown": "^0.2.2",
     "striptags": "^3.1.1"
